# ChatPDF

./: .gitignore  index.html  package.json  pnpm-lock.yaml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: annotations.rs  chat.rs  documents.rs  files.rs  mod.rs  settings.rs  translate.rs  words.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/llm/: client.rs  mod.rs  streaming.rs  tools.rs
src-tauri/src/translation/: deepl_provider.rs  llm_provider.rs  mod.rs  mymemory_provider.rs
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ToolCallResult.tsx
src/components/layout/: AppShell.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx
src/components/pdf/: AnnotationOverlay.tsx  HoverTooltip.tsx  PdfPage.tsx  PdfViewer.tsx  SearchBar.tsx  SelectionToolbar.tsx  SplitView.tsx  WordOverlay.tsx
src/components/settings/: CommandPalette.tsx  SettingsModal.tsx
src/components/sidebar/: AnnotationList.tsx  OutlineSidebar.tsx  WordListSidebar.tsx
src/hooks/: useAnnotations.ts  useDifficultWords.ts  useHoverTranslation.ts  useKeyboardShortcuts.ts  useLlmChat.ts  usePdfDocument.ts  useTextLayer.ts  useTheme.ts
src/lib/: positionSerializer.ts  wordSplitter.ts
src/services/: ankiExporter.ts  pdfTextExtractor.ts  tauriCommands.ts
src/stores/: chatStore.ts  pdfStore.ts  settingsStore.ts  tabStore.ts  uiStore.ts  wordListStore.ts
