[package]
name = "chatpdf"
version = "0.1.0"
description = "ChatPDF - AI-powered PDF reader"
authors = ["you"]
edition = "2021"

[lib]
name = "chatpdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
lru = "0.7"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
base64 = "0.22"
